fix: z-index for navBar in mobile

--- a/src/components/style/NavBar.scss
+++ b/src/components/style/NavBar.scss
@@ -74,6 +74,7 @@
 
 @media screen and (max-width: 600px) {
     .NavBar {
+        z-index: 999;
         position: fixed;
         left: auto;
         bottom: 0;
@@ -95,7 +96,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            justify-content: space-around;
+            justify-content: space-evenly;
     
             min-height: auto;
             max-height: auto;
