--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -18,7 +18,7 @@
     color: #fff;
 
     @media screen and (max-width: 600px) {
-        min-height: auto;
+        min-height: calc(100svh - var(--bottom));
         margin-left: 0;
 
         padding-bottom: var(--bottom);
